fix: slide overflowed the body fixed

--- a/src/app/layouts/Footer/Footer.module.css
+++ b/src/app/layouts/Footer/Footer.module.css
@@ -4,6 +4,8 @@
 
     background-color: var(--color-black);
     position: relative;
+
+    overflow-x: hidden;
 }
 
 .contact {
