--- a/src/app/layouts/Plans/Plans.module.css
+++ b/src/app/layouts/Plans/Plans.module.css
@@ -1,3 +1,7 @@
+.plans{
+  overflow: hidden;
+}
+
 .cards {
   justify-content: space-between;
 }
@@ -12,7 +16,7 @@
 .card p {
   font-family: var(--font-khula);
 }
-.titleCard { }
+/* .titleCard { } */
 .oldPrice {
   padding-top: 2.96vw;
   text-decoration: line-through;
